# Search_engine

./: CMakeLists.txt  README.md  config.json  requests.json
include/: converterJSON.h  invertedIndex.h  searchServer.h
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  testInvertedIndex.cpp  testSearchServer.cpp  testSimple.cpp
